# victor-prokhorov

./: .gitignore  README.md  \  text.txt
.config/app_config/: app_config.toml
.config/my_app/: my_app.toml
.config/nvim/: init.lua
.history/: NOTES_20220627125021.md  NOTES_20220627125159.md  NOTES_20220627130042.md  NOTES_20220627130044.md  NOTES_20220627130054.md  NOTES_20220627130057.md  NOTES_20220627130058.md  NOTES_20220627130059.md  NOTES_20220627130101.md  NOTES_20220627130104.md  NOTES_20220627130105.md  NOTES_20220627130106.md  NOTES_20220627130107.md  NOTES_20220627130211.md  NOTES_20220627130212.md  NOTES_20220627131559.md  NOTES_20220627131606.md  NOTES_20220627131610.md  NOTES_20220627131613.md  NOTES_20220627131615.md  NOTES_20220627131618.md  NOTES_20220627131623.md  NOTES_20220627134900.md  NOTES_20220627134903.md  install_20220622095229.sh  install_20220622095940.sh  install_20220622100228.sh  install_20220622100304.sh  install_20220622100457.sh  install_20220622101537.sh  install_20220622101544.sh  install_20220622135119.sh  install_20220622135133.sh  install_20220622135134.sh  install_20220622135141.sh  install_20220622141244.sh  install_20220622141303.sh  install_20220622143623.sh  install_20220622143629.sh  install_20220622143632.sh  (+30 more)
bootstrapping/: README.md  editor-windows  install.sh
channels_multithread/: Cargo.toml
channels_multithread/src/: main.rs
charts/: .eslintrc.js  package-lock.json  package.json
cheatsheets/: README.md  RUST.md
codepipeline/: .gitignore  cdk.json  deploy.sh  package-lock.json  package.json
cra/: package-lock.json  package.json
create-react-app/: package-lock.json  package.json
highcharts-chakra/: package-lock.json  package.json
install/: .bashrc  .install.sh.swp  .tmux.conf  README.md  install.sh  ssh.sh  y  y.pub
mtx_poisoning/: Cargo.toml
rust-cli-book/: README.md
rust-cli-book/grrs/: Cargo.toml  README.md
rust-cli-book/grrs/src/: build.rs  channels.rs  env_args_example.rs  lib.rs  main.rs
rust-cli-book/grrs/tests/: cli.rs  integration_test.rs
rust-experiments/: postgres.sh
rust-experiments/axum-jwt-sqlx/: Cargo.toml  check.sh  dev.sh  test.sh  user.json
rust-experiments/axum-jwt-sqlx/src/: main.rs
rust-experiments/rayon-data-paralalism/: Cargo.toml
rust-experiments/rayon-data-paralalism/benches/: rayon.rs
rust-experiments/rayon-data-paralalism/src/: lib.rs  main.rs
rust-experiments/rayon-data-paralalism/src/par_iter/: mod.rs
rustlings/: temp_11756_ThreadId1  temp_15114_ThreadId1
settings/: init.lua  plugins.lua  working.lua
(+243 files in other folders)
