[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "3.2.8"
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"
indicatif = "0.16.2"
log = "0.4.17"
env_logger = "0.9.0"
