[package]
name = "grrs-cli-book-demo-deploy-test"
version = "0.1.1"
authors = ["Victor Prokhorov <mail@victorprokhorov.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/victor-prokhorov/victor-prokhorov/tree/main/rust-cli-book/grrs"
repository = "https://github.com/victor-prokhorov/victor-prokhorov/tree/main/rust-cli-book/grrs"
keywords = ["cli", "search"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = "3.2.8"
clap = { version = "3.2.8", features = ["derive"] }
anyhow = "1.0.58"
indicatif = "0.16.2"
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
