[package]
name = "axum-jwt-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.13"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.140", features = ["derive"] }
sha2 = "0.10.2"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
