[package]
name = "axum-jwt-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version= "0.5.13", features = ["headers"]}
hmac = "0.12.1"
jsonwebtoken = "8.1.1"
jwt = "0.16.0"
once_cell = "1.13.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
sha2 = "0.10.2"
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
