[package]
name = "rayon-data-paralalism"
version = "0.1.0"
edition = "2021"

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"

[[bin]]
name = "par_iter"
path = "src/par_iter/mod.rs"

[dependencies]
rayon = "1.5"
suspend = "0.1.3"

[[bench]]
name = "rayon"
harness = false


